--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "homepage": "https://berrydashboard.io/free",
     "proxy": "https://localhost:1341/",
     "dependencies": {
-        "@date-io/date-fns": "^2.16.0",
+        "@date-io/date-fns": "^1.3.1",
         "@emotion/cache": "^11.9.3",
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
@@ -19,8 +19,10 @@
         "@mui/system": "^5.8.6",
         "@mui/utils": "^5.8.6",
         "@mui/x-data-grid": "^5.17.5",
+        "@mui/x-date-pickers": "^5.0.4",
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
+        "date-fns": "^2.29.3",
         "formik": "^2.2.9",
         "framer-motion": "^6.3.16",
         "material-ui-popup-state": "^4.0.1",
